dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-express-app-deployment
  labels:
    app: node-express-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-express-app
  template:
    metadata:
      labels:
        app: node-express-app
    spec:
      containers:
        - name: node-express-app
          image: registry.digitalocean.com/container-registry-test191202/node-express.js:latest 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-express-app-service
spec:
  selector:
    app: node-express-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
